bin/testsuite/tests/compiler/src/errors/compiler5518.swg
#global testerror "Err0649"

#test
{
    foreach toto() in "tto" {}
}